Issue #1554848: Vertical positioning of navigation is wrong/too high

--- a/css/layouts/fixed-width-rtl.css
+++ b/css/layouts/fixed-width-rtl.css
@@ -65,6 +65,7 @@
 
 #main {
   padding-top: 3em; /* Move all the children of #main down to make room. */
+  position: relative;
 }
 
 #navigation {
