--- a/sass/layouts/fixed-width.scss
+++ b/sass/layouts/fixed-width.scss
@@ -78,6 +78,7 @@ $zen-auto-include-item-base: false;
 
 #main {
   padding-top: 3em; /* Move all the children of #main down to make room. */
+  position: relative;
 }
 #navigation {
   position: absolute;
